scrollbar fix awesomefont 6.0

--- a/css/style.css
+++ b/css/style.css
@@ -13,20 +13,7 @@
 body{
     font-family: 'MaruBuri', serif;
 	font-size:15px;
-	/*scrollbar-width: none !important;
-	-ms-overflow-style: none !important;*/
-	max-width: 100%;
-	overflow-x: hidden;
 }
-
-/*body::-webkit-scrollbar{
-	display: none !important;
-	width: 0;
-	height: 0;
-	background: transparent !important;
-	-webkit-appearance: none !important;
-}*/
-
 
 h1,h2,h3,h4,h5,h6{
     font-family: 'MaruBuri', serif;
